--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/merge
-spring.datasource.username=user
-spring.datasource.password=user
-
-#spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
@@ -14,6 +10,3 @@ logging.level.org.springframework.security=DEBUG
 spring.data.rest.basePath=/api
 
 spring.jpa.hibernate.ddl-auto=update
-#  TODO - uncomment before pushing
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
